# operating_system-android

./: .gitignore  Common.props  _.cmake  build.h  port.props
_include/: deployment.rc
_libc++_shared/: CMakeLists.txt  dummy.cpp
_seed/: UpgradeLog.htm  UpgradeLog2.htm  android_all.sln  android_app.sln  android_arcade.sln  android_arcade_copy.sln  android_audio.sln  android_basic.sln  android_basic1.sln  android_build_all.sln  android_cidadedecuritiba_alphaclock.sln  android_complex.sln  android_core_auraverse.sln  android_core_clockverse.sln  android_core_flag.sln  android_core_hellomultiverse.sln  android_core_lctv.sln  android_core_projection.sln  android_core_rdpclient.sln  android_coregames.sln  android_coregames_copy.sln  android_form.sln  android_form1.sln  android_foundation.sln  android_foundation_copy.sln  android_game_tictactoe.sln  android_hellomultiverse.sln  android_multimedia - Copy.sln  android_multimedia.sln  android_simple.sln  android_third.sln  android_third_full.sln  android_veriwell_verisimplevideo.sln  android_veriwell_waven.sln  deployment.rc  nord_build_all.sln  nord_core_hellomultiverse.sln  wincore_rdp.sln
aaa_want_to_remove_platform_configuration/: basis.h  common.h  deployment.rc  stage.h
acme_android/: CMakeLists.txt  _.cpp  _.h  _acme_android.h  _factory.cpp  aaa_acme_directory.h  acme_android.vcxproj  acme_directory.cpp  acme_directory.h  deployment.rc  dir_context.cpp  dir_context.h  dir_system.cpp  dir_system.h  directory_context.cpp  directory_context.h  directory_system.cpp  directory_system.h  file.cpp  file.h  file_context.cpp  file_context.h  file_system.cpp  file_system.h  framework.h  node.cpp  node.h  node_android.cpp  nord_acme_android.vcxproj  nord_acme_android.vcxproj.filters
acme_windowing_android/: CMakeLists.txt  _.cpp  _.h  _factory.cpp  aaa_buffer.cpp  aaa_monitor.cpp  aaa_monitor.h  aaa_node.cpp  buffer.cpp  deployment.rc  display.cpp  display.h  framework.h  host_interaction.cpp  host_interaction.h  nord_windowing_android.vcxproj  text_composition_client.cpp  text_composition_client.h  window.cpp  window.h  windowing.cpp  windowing.h
acme_windowing_android/aaa_android/: _asset_manager.h  aaa_driver.h  com_ace_InputConnection.cpp  object.h
acme_windowing_android/android/: _.cpp  _android.cpp  _asset.cpp  _internal.h  aaa_com_ace_InputConnection.cpp  aaa_com_ace_enumerate.cpp  aaa_com_ace_impact.cpp  aaa_platform_platform_main_activity.cpp  android_asset.cpp  android_asset.h  android_asset_manager.cpp  android_asset_manager.h  application_sink.cpp  application_sink.h  application_state.cpp  application_state.h  application_state_jni.cpp  bind.cpp  bind.h  com_ace_InputConnection.cpp  com_ace_enumerate.cpp  com_ace_main_activity.cpp  driver.cpp  driver.h  jni_application_message.cpp  jni_application_message.h  jni_bind.cpp  jni_bind.h  jni_class.cpp  jni_class.h  jni_context.cpp  jni_context.h  jni_data_block.cpp  jni_data_block.h  jni_environment.cpp  jni_local.cpp  jni_local.h  jni_message.cpp  jni_message.h  jni_message_sink.cpp  (+10 more)
apex_android/: CMakeLists.txt  _.cpp  _.h  _apex_android.h  _factory.cpp  (+31 more)
audio_opensles/: CMakeLists.txt  _.h  _audio_opensles.h  _factory.cpp  aaa_audio_opensles.h  audio_mmsystem_wave_in.h  audio_opensles.cbp  audio_opensles.h  audio_opensles_engine.cpp  audio_opensles_engine.h  audio_opensles_factory_exchange.cpp  audio_opensles_factory_exchange.h  audio_opensles_translation.cpp  audio_opensles_translation.h  audio_opensles_wave_in.cpp  audio_opensles_wave_in.h  audio_opensles_wave_out.cpp  audio_opensles_wave_out.h  deployment.rc  engine.cpp  engine.h  framework.h  in.cpp  in.h  nord_audio_opensles.vcxproj  nord_audio_opensles.vcxproj.filters  out.cpp  out.h  translation.cpp  translation.h
innate_ui_android/: CMakeLists.txt  _.h  _factory.cpp  aaa_buffer.cpp  aaa_display.cpp  aaa_display.h  aaa_monitor.cpp  aaa_windowing.cpp  aaa_windowing.h  button.cpp  button.h  deployment.rc  dialog.cpp  dialog.h  icon.cpp  icon.h  innate_ui.cpp  innate_ui.h  still.cpp  still.h  window.cpp  window.h  windowing.cpp
innate_ui_android/aaa_android/: _.cpp  _asset_manager.cpp  _internal.h  _jni_environment.cpp  aaa_driver.h  bind.cpp  com_ace_enumerate.cpp  com_ace_main_activity.cpp  message_box.h
innate_ui_android/android/: _android.cpp  _internal.h  aaa_driver.cpp  object.cpp
windowing_android/: CMakeLists.txt  _.h  _factory.cpp  _jni.cpp  _jni_bind_app.cpp  _jni_bind_impact.cpp  _windowing_android.h  aaa_node.cpp  aaa_node.h  buffer.cpp  buffer.h  deployment.rc  display.cpp  display.h  framework.h  host_interaction.cpp  host_interaction.h  monitor.cpp  monitor.h  node.cpp  node.h  nord_windowing_android.vcxproj  nord_windowing_android.vcxproj.filters  text_composition_client.cpp  text_composition_client.h  window.cpp  window.h  windowing.cpp  windowing.h  windowing_android.h
windowing_android/android/: _.cpp  _android.cpp  _asset.cpp  _asset.h  _asset_manager.cpp  _asset_manager.h  _internal.h  _jni_environment.cpp  aaa_bind.cpp  aaa_bind.h  aaa_internal.h  aaa_media_library.h  aaa_message_box.cpp  aaa_message_box.h  aaa_object.h  application_sink.cpp  application_sink.h  application_state.cpp  application_state.h  bind.cpp  bind.h  com_ace_InputConnection.cpp  com_ace_ace.cpp  com_ace_enumerate.cpp  com_ace_impact.cpp  com_ace_main_activity.cpp  driver.cpp  driver.h  java_ace_ace.cpp  java_ace_impact.cpp  java_ace_input_connection.cpp  java_enumerate.cpp  media_library.cpp  media_library.h  message_box.cpp  message_box.h  object.cpp  object.h  platform_platform_InputConnection.cpp  platform_platform_enumerate.cpp  (+5 more)
windowing_android/operating_system/: _.cpp  _asset.cpp  _asset_manager.cpp  _asset_manager.h  _operating_system.h  bind.cpp  bind.h  direct.cpp  direct.h  driver.cpp  driver.h  java_ace_ace.cpp  java_ace_app.cpp  java_ace_impact.cpp  jni_environment.cpp  message_box.cpp  message_box.h  object.cpp  object.h
write_text_afont/: CMakeLists.txt  _.h  _factory.cpp  aaa_write_text_win32_gdi.cpp  font_enumeration.cpp  font_enumeration.h  fonts.cpp  fonts.h  write_text.cpp  write_text.h
(+333 files in other folders)
